# simplelink-lowpower-f2-sdk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Windows_WSL2_setup.md  changelog.html  imports.mak  license_simplelink_cc13xx_cc26xx_sdk_7_41_00_17.txt  manifest_simplelink_cc13xx_cc26xx_sdk_6_20_00_29.html  manifest_simplelink_cc13xx_cc26xx_sdk_6_30_00_84.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_10_00_35_eng.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_10_00_98.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_10_01_24.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_10_02_23.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_40_00_77.html  manifest_simplelink_cc13xx_cc26xx_sdk_7_41_00_17.html  manifest_simplelink_cc13xx_cc26xx_sdk_8_30_01_01.html  release_notes_simplelink_cc13xx_cc26xx_sdk_6_10_00_29.html  release_notes_simplelink_cc13xx_cc26xx_sdk_6_20_00_29.html  release_notes_simplelink_cc13xx_cc26xx_sdk_6_30_00_84.html  release_notes_simplelink_cc13xx_cc26xx_sdk_6_40_00_13.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_10_00_35_eng.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_10_00_98.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_10_01_24.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_10_02_23.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_40_00_77.html  release_notes_simplelink_cc13xx_cc26xx_sdk_7_41_00_17.html  release_notes_simplelink_cc13xx_cc26xx_sdk_8_30_01_01.html
.metadata/: product.json
.metadata/.tirex/: ble5stack.content.tirex.json  ble5stack.package.ccs.json  ble5stack.package.tirex.json  categoryinfo.content.tirex.json  dmm.content.tirex.json  dmm.package.ccs.json  dmm.package.tirex.json  docs.content.tirex.json  package.ccs.json  package.tirex.json  proprf.content.tirex.json  proprf.package.ccs.json  proprf.package.tirex.json  thread.content.tirex.json  thread.package.ccs.json  thread.package.tirex.json  ti154stack.content.tirex.json  ti154stack.package.ccs.json  ti154stack.package.tirex.json  ti_sidewalk.content.tirex.json  ti_sidewalk.package.ccs.json  ti_sidewalk.package.tirex.json  wisunfan.content.tirex.json  wisunfan.package.ccs.json  wisunfan.package.tirex.json  zstack.content.tirex.json  zstack.package.ccs.json  zstack.package.tirex.json
.metadata/.tirex/.dependencies/: adcbufcontinuous_CC1312R1_LAUNCHXL_freertos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_freertos_iar_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_freertos_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos7_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos7_iar_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos7_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos_iar_0.dependency.tirex.json  adcbufcontinuous_CC1312R1_LAUNCHXL_tirtos_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_freertos_ccs_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_freertos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_freertos_iar_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos7_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos7_iar_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos7_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos_iar_0.dependency.tirex.json  adcbufcontinuous_CC1352P1_LAUNCHXL_tirtos_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_freertos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_freertos_iar_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_freertos_ticlang_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_tirtos7_ccs_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_tirtos7_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_tirtos7_iar_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_tirtos_gcc_0.dependency.tirex.json  adcbufcontinuous_CC1352P_2_LAUNCHXL_tirtos_iar_0.dependency.tirex.json  (+13650 more)
examples/rtos/LP_CC2652R7/: makefile
kernel/: kernel_config_release.syscfg.js
kernel/.meta/: kernel_config_release.syscfg.js
kernel/freertos/: CMakeLists.txt  CMakeSources.cmake  ConfigFreeRTOS.cmake.in
kernel/nortos/: CMakeLists.txt  CMakeSources.cmake  ConfigNoRtos.cmake.in  NoRTOS.c  NoRTOS.h
past_release_info/: license_simplelink_cc13xx_cc26xx_sdk_6_10_00_29.txt  manifest_simplelink_cc13xx_cc26xx_sdk_6_10_00_29.html
source/ti/log/: Log.h  (+10 more)
tfm_s/cc26x4/: Makefile
tfm_s/cc26x4/production_full/: CMakeLists.inc  CMakeLists.txt  Makefile  README  README.md  memory_layout.yaml  tfm_manifest_list.yaml
tfm_s/cc26x4/production_full/attestation_sp/: tfm_initial_attestation.yaml
tfm_s/cc26x4/production_full/config/: config_profile.h  config_tfm_project.h
tfm_s/cc26x4/production_full/crypto_sp/: CMakeLists.inc  CMakeLists.txt  crypto_sp.yaml  crypto_sp_interrupts.c  tfm_its_local_api.c
tfm_s/cc26x4/production_full/crypto_sp/psa/: PSA_s.c  PSA_s.h  ti_psa_crypto.c  ti_psa_crypto.h  ti_psa_crypto_secure_api.c  ti_psa_tfm.h
tfm_s/cc26x4/production_full/crypto_sp/syscfg/: crypto_sp.syscfg  product.json
tfm_s/cc26x4/production_full/internal_storage_sp/: CMakeLists.inc  CMakeLists.txt  internal_storage_sp.yaml
tfm_s/cc26x4/production_full/tdc/: CMakeLists.inc  CMakeLists.txt  README.md
tfm_s/cc27xx/production_full/crypto_sp/: CMakeLists.txt  crypto_sp.yaml  dummy.c
tfm_s/cc27xx/production_full/internal_storage_sp/: CMakeLists.txt  internal_storage_sp.yaml
tfm_s/cc27xx/production_full/system_sp/: CMakeLists.txt  dummy.c  system_sp.yaml
tfm_s/cc27xx/production_full/tdc/: CMakeLists.txt  README.md
tfm_s/cmake/: deploy.cmake
tfm_s/util/: makefile_cc26x4.mak  makefile_common.mak  tfm_generated_file_list.yaml
tools/iar/: Examples.html  SIMPLELINK_CC13XX_CC26XX_SDK.custom_argvars  sysconfig_iar_setup.xml
tools/ti_wisunfan/: setup_pyspinel.bat  setup_pyspinel.sh
(+10111 files in other folders)
